--- a/system-web/package.json
+++ b/system-web/package.json
@@ -12,6 +12,7 @@
     "echarts": "^5.1.0",
     "element-ui": "^2.4.5",
     "vue": "^2.6.11",
+    "vue-contextmenujs": "^1.3.13",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
