--- a/SystemServer/Pipfile
+++ b/SystemServer/Pipfile
@@ -1,12 +1,12 @@
 [[source]]
-url = "https://pypi.org/simple"
-verify_ssl = true
 name = "pypi"
-
-[packages]
-django = "*"
+url = "https://mirrors.aliyun.com/pypi/simple"
+verify_ssl = true
 
 [dev-packages]
+
+[packages]
+flask = "*"
 
 [requires]
 python_version = "3.9"
